# Polkadex

./: .gitignore  .gitignore.save  .gitmodules  .travis.yml  2nodes.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile-solo-chain  README.md  TODO.txt  block_weights.rs  build-spec.sh  build-spec1.sh  build-spec2.sh  build.sh  build_polkadex.sh  check-all-ci-tests.sh  codecov.yml  config.toml  customSpec.json  customSpecRaw.json  docker-compose.yml  docker-start.sh  dockerfile  frame-weight-template.hbs  generate_polkadex_address.sh  generate_rust_code_claims.sh  genesis.wasm  install_rust.sh  package.json  para-200-genesis  prometheus.yml  redspot.config.ts  release.config.js  runtime_upgrade.js  rust-toolchain  rust-toolchain.toml  rustfmt.toml  (+9 more)
cli/: Cargo.toml  build.rs
cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
client/: Cargo.toml
client/src/: lib.rs
client/thea/: Cargo.toml  README.md  build.rs
client/thea/rpc/: Cargo.toml
client/thea/src/: error.rs  inherents.rs  keystore.rs  keystore_tests.rs  lib.rs  rounds.rs  utils.rs  worker.rs
clients/ocex/: Cargo.toml
clients/ocex/src/: error.rs  keystore.rs  keystore_tests.rs  lib.rs
clients/orderbook/: Cargo.toml
clients/orderbook/rpc/: Cargo.toml
clients/orderbook/src/: error.rs  gossip.rs  hasher.rs  keystore.rs  lib.rs  metrics.rs  snapshot.rs  test_helper_fn.rs  tests.rs  utils.rs  utils_tests.rs  worker.rs  worker_tests.rs
clients/thea/: Cargo.toml
clients/thea/rpc/: Cargo.toml
clients/thea/src/: error.rs  gossip.rs  keystore.rs  lib.rs  metrics.rs  types.rs  worker.rs
contracts/uniswap_v2/: Cargo.toml  README.md  chain_extension.rs  constants.rs  errors.rs  install_toolchain_and_build.sh  installtoolchain  lib.rs  mock.rs  models.rs
executor/: Cargo.toml
executor/src/: lib.rs
misc/crowdloan-verifier/: Cargo.toml  README.md  crowdloan_distribution_rewards.csv  finalCrowdloan - finalCrowdloan.csv
misc/crowdloan-verifier/src/: main.rs
misc/load-testing/: Cargo.toml
misc/load-testing/src/: main.rs
node/: Cargo.toml  build.rs
node-primitives/: Cargo.toml
node-primitives/src/: lib.rs
node/mainnet/: Cargo.toml
node/mainnet/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs  silly_rpc.rs
node/testnet/: Cargo.toml
node/testnet/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
nodes/polkadex-mainnet-node/: Cargo.toml
nodes/polkadex-mainnet-node/src/: chain_spec.rs  lib.rs  main.rs  service.rs
nodes/polkadex-parachain-node/: Cargo.toml
nodes/polkadex-parachain-node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
offchain-ipfs-primitives/: Cargo.toml
offchain-ipfs-primitives/src/: inherents.rs  lib.rs
pallets/Assets/: Cargo.toml
pallets/Assets/src/: banchmarking.rs  lib.rs  mock.rs  test.rs  weights.rs
pallets/Engine/: Cargo.toml
pallets/Engine/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/Polkadex_Ido/: Cargo.toml  README.md
pallets/Polkadex_Ido/common/: Cargo.toml
pallets/Polkadex_Ido/rpc/: Cargo.toml
pallets/Polkadex_Ido/runtime-api/: Cargo.toml
pallets/Polkadex_Ido/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  weights.rs
pallets/Polkapool/: Cargo.toml
pallets/Polkapool/src/: lib.rs
pallets/asset-handler/: Cargo.toml
pallets/asset-handler/rpc/: Cargo.toml
pallets/asset-handler/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
polkadex-extrinsic/: Cargo.toml
polkadex-extrinsic/src/: lib.rs
primitives/: Cargo.toml
primitives/bls/: Cargo.toml
primitives/bls-primitives/: Cargo.toml
primitives/bls-primitives/src/: application_crypto.rs  crypto.rs  host_function.rs  host_functions.rs  lib.rs  tests.rs
primitives/bls/src/: application_crypto.rs  host_functions.rs  lib.rs
primitives/ocex/: Cargo.toml
primitives/ocex/src/: lib.rs
primitives/orderbook/: Cargo.toml
primitives/orderbook/src/: constants.rs  ingress.rs  lib.rs  lmp.rs  ocex.rs  recovery.rs  traits.rs  types.rs  utils.rs
primitives/polkadex/: Cargo.toml
primitives/polkadex/src/: assets.rs  auction.rs  egress.rs  fees.rs  ingress.rs  lib.rs  misbehavior.rs  ocex.rs  rewards.rs  snapshot.rs  utils.rs  withdrawal.rs
primitives/src/: assets.rs  common_types.rs  lib.rs
primitives/thea/: Cargo.toml
primitives/thea/src/: constants.rs  ethereum.rs  frost.rs  inherents.rs  keygen.rs  lib.rs  parachain.rs  payload.rs  runtime.rs  test.rs  traits.rs  types.rs
relayer/: Cargo.toml
relayer/src/: lib.rs  main.rs  native_connector.rs  primitives.rs
rpc/: Cargo.toml
rpc/assets/: Cargo.toml
rpc/assets/runtime-api/: Cargo.toml
rpc/assets/src/: lib.rs
rpc/src/: lib.rs
rpc/swap/: Cargo.toml
rpc/swap/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/src/: lib.rs
runtime/src/: bridge.rs  constants.rs  ethereum.rs  impls.rs  lib.rs  migration.rs  signature.rs  signedpayload.rs  unchecked_extrinsic.rs  voter_bags.rs
runtime/src/weights/: basic_channel_inbound_weights.rs  ethereum_light_client_weights.rs  frame_system.rs  mod.rs  orml_currencies.rs  orml_tokens.rs  orml_vesting.rs  pallet_babe.rs  pallet_balances.rs  pallet_bounties.rs  pallet_collective.rs  pallet_election_provider_multi_phase.rs  pallet_elections_phragmen.rs  pallet_grandpa.rs  pallet_identity.rs  pallet_im_online.rs  pallet_indices.rs  pallet_membership.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_staking.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pdex_migration.rs  verifier_lightclient_weights.rs
runtime/testnet/: Cargo.toml
runtime/testnet/src/: lib.rs
thea-primitives/: Cargo.toml
thea-primitives/src/: lib.rs  liquidity.rs  normal_deposit.rs  parachain_primitives.rs  thea_types.rs
wallet-connector/: Cargo.toml
wallet-connector/src/: ethereum.rs  lib.rs  signature.rs  signed_payload.rs  signedpayload.rs  unchecked_extrinsic.rs
(+1053 files in other folders)
