[profile.release]
panic = "unwind"

[workspace]
members = [
    "client",
    "clients/ocex",
    "node",
    "runtime",
    "primitives/ocex",
    "pallets/pdex-migration",
    "pallets/chainbridge",
    "pallets/asset-handler",
    "pallets/pdex-migration",
    "pallets/ocex",
]

[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git",  branch="polkadot-v0.9.28"}
