[profile.release]
panic = "unwind"

[workspace]
members = [
    "client",
    "node",
    "runtime",
    "pallets/pdex-migration",
    "pallets/chainbridge",
    "pallets/asset-handler",
    "pallets/pdex-migration",
    "pallets/ocex",
]

[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git",  branch="polkadot-v0.9.28" }

[workspace.dependencies]
clap = "3.0"
log = "0.4.8"
rand = "0.8.5"
serde = "1.0.136"
anyhow = "1.0.56"
futures = "0.3.9"
smallvec = "1.6.1"
getrandom = "0.2.7"
jsonrpsee = "0.15.1"
itertools = "0.10.1"
blake2-rfc = "0.2.18"
hex-literal = "0.3.1"
parking_lot = "0.12.1"
jsonrpc-core = "18.0.0"
static_assertions = "1.1.0"
parity-scale-codec = "3.1.5"
ias-verify = { version = "0.1.5", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
test-utils = { git = "https://github.com/Polkadex-Substrate/pallets.git", branch = "polkadot-v0.9.28" }
rust_decimal = { git ="https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master" }
scale-info = "2.1.2"
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-society = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-child-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-cli = {  git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.28" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-service = {  git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.28" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-finality-grandpa = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28"}
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
grandpa-primitives = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", package="sp-finality-grandpa" }
polkadex-primitives = { tag = "polkadot-v0.9.28v0.1.10", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
#node-executor = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", features = ["wasmtime"] }
