[package]
name = "node-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "substrate"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "substrate"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.22"
parking_lot = "0.11.1"

#local
engine-rpc = { path = "../pallets/polkadex-engine/rpc" }
engine-runtime-api = { default-features = false, path = "../pallets/polkadex-engine/runtime-api" }


sp-authority-discovery = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-consensus-babe = {version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', branch = "master"}
grandpa-primitives = {package = "sp-finality-grandpa",git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
sp-inherents = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-keyring = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-keystore = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}

sc-finality-grandpa-warp-sync = { git = 'https://github.com/paritytech/substrate.git', branch = "master", optional = true }
sc-client-api = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-chain-spec = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-transaction-pool = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-network = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-slots = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-babe = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
grandpa = { package = "sc-finality-grandpa" ,git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-client-db = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
sc-offchain = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-rpc = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-basic-authorship = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-service = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
sc-tracing = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-telemetry = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-authority-discovery = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}

pallet-indices = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-contracts = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
frame-system = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-transaction-payment ={git = 'https://github.com/paritytech/substrate.git', branch = "master"}
frame-support = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
pallet-im-online = {git = 'https://github.com/paritytech/substrate.git', branch = "master", default-feature = false}
pallet-authority-discovery = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-staking = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}

# node-specific dependencies
node-runtime = { version = "2.0.0", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-executor = { version = "2.0.0", path = "../executor" }

sc-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
node-inspect = { version = "0.8.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }

wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils",git = 'https://github.com/paritytech/substrate.git', branch = "master", optional = true, version = "0.9.0"}

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "2.0.0", path = "../executor", features = [ "wasmtime" ] }
sc-cli = { version = "0.9.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master", features = [ "wasmtime" ] }
sc-service = { version = "0.9.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master", features = [ "wasmtime" ] }
sp-trie = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master", features = ["memory-tracker"] }


[dev-dependencies]
sc-keystore = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"], git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus-epochs = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sc-service-test = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
futures = "0.3.9"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.17"
serde_json = "1.0"
regex = "1"
platforms = "0.2.1"

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.8.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
substrate-build-script-utils = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
substrate-frame-cli = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "master" }


[build-dependencies.sc-cli]
version = "0.9.0"
package = "sc-cli"
git = 'https://github.com/paritytech/substrate.git'
branch = "master"
optional = true

[features]
default = [ "cli" ]
browser = [
    "browser-utils",
    "wasm-bindgen",
    "wasm-bindgen-futures",
]
cli = [
    "node-executor/wasmi-errno",
    "node-inspect",
    "sc-cli",
    "frame-benchmarking-cli",
    "substrate-frame-cli",
    "sc-service/db",
    "structopt",
    "substrate-build-script-utils",
    "sc-finality-grandpa-warp-sync"
]
runtime-benchmarks = [
    "node-runtime/runtime-benchmarks",
    "frame-benchmarking-cli",
]