[package]
name = "polkadex-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-executor = { workspace = true }
node-polkadex-runtime = { path = "../runtime", version = "4.0.0" }
frame-benchmarking = { workspace = true }
thea-primitives = { path = "../thea-primitives" }
wallet-connector = { path = "../wallet-connector" }
