[package]
name = "polkadex-client"
version = "5.3.0"
edition = "2021"

[dependencies]
sc-executor = { workspace = true }
bls-primitives = { path = "../primitives/bls" }
node-polkadex-runtime = { path = "../runtimes/mainnet" }
frame-benchmarking = { workspace = true }
sp-statement-store = { workspace = true }
