[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
sc-executor = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-keystore = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-state-machine = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-trie = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
trie-root = "0.16.0"
frame-benchmarking = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}

[dev-dependencies]
criterion = "0.3.0"
frame-support = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
frame-system = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
node-testing = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-balances = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-contracts = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-grandpa = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-im-online = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-indices = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-session = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-timestamp = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-transaction-payment = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
pallet-treasury = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-application-crypto = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-runtime = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
sp-externalities = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
substrate-test-client = {git = 'https://github.com/paritytech/substrate.git', branch = "master"}
wat = "1.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
stress-test = []
